manifest/overlays/prod/prod-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  labels:
    app: product-api
spec:
  replicas: 1
  template:
    metadata:
      name: product-api
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: 004237575886.dkr.ecr.us-east-1.amazonaws.com/rimdesk/product-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: product-api
