manifest/overlays/prod/prod-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-api
spec:
  gateways:
    - api-gateway
  hosts:
    - "api.rimdesk.com"
  http:
    - name: "product-v1-routes"
      match:
        - uri:
            prefix: "/v1/products"
      route:
        - destination:
            host: product-api.rimdesk-prod.svc.cluster.local
